# swarm-sar-coordination

./: .gitignore  README.md  mise.toml  pyproject.toml
docs/superpowers/plans/: 2026-07-05-swarm-sar-simulation.md  2026-07-05-tasks-6-10.md
docs/superpowers/specs/: 2026-07-05-swarm-sar-simulation-design.md
scenarios/: default.txt  empty.txt  maze.txt  walls.txt
src/swarm_sar/: __main__.py  astar.py  drone.py  environment.py  mission_manager.py  plot.py  renderer.py  simulator.py  sweep.py
tests/: test_allocation.py  test_astar.py  test_battery.py  test_coverage.py  test_environment.py  test_fsm.py  test_simulator.py
